test/k8s/manifests/fqdn-proxy-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "fqdn-proxy-policy.yaml"
spec:
  description: "fqdn-proxy-policy.yaml"
  endpointSelector:
    matchLabels:
      id: app2
  egress:
  - toPorts:
    - ports:
      - port: '53'
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
  - toFQDNs:
    - matchPattern: "nginx-ci.cilium.rocks"
